<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_contact_edit"
        android:title="@string/edit"
        android:icon="@drawable/ic_edit_white"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_contact_favorite"
        android:title="@string/favorite"
        android:icon="@drawable/ic_star_off_white"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_contact_share"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_contact_delete"
        android:title="@string/delete"
        app:showAsAction="never" />
</menu>
