<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contact_form_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.musasyihab.easycontact.contactform.ContactFormActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/contact_detail_avatar_height">

                <ImageView
                    android:id="@+id/contact_form_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:background="@drawable/green_gradient"
                    tools:src="@mipmap/ic_launcher"/>

                <ImageView
                    android:id="@+id/contact_form_avatar_btn"
                    android:layout_width="@dimen/icon_small_size"
                    android:layout_height="@dimen/icon_small_size"
                    android:layout_marginRight="@dimen/medium_margin"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:src="@drawable/ic_camera_white"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/large_padding"
                android:paddingLeft="@dimen/medium_padding"
                android:paddingRight="@dimen/medium_padding"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/icon_small_size"
                        android:layout_height="@dimen/icon_small_size"
                        android:layout_marginRight="@dimen/extra_large_margin"
                        android:src="@drawable/ic_person"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/medium_padding"
                        android:paddingBottom="@dimen/large_padding"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/contact_form_first_name_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginRight="@dimen/small_margin">

                            <EditText
                                android:id="@+id/contact_form_first_name_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/first_name"
                                android:inputType="textPersonName"/>

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/contact_form_last_name_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <EditText
                                android:id="@+id/contact_form_last_name_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/last_name"
                                android:inputType="textPersonName"/>

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/icon_small_size"
                        android:layout_height="@dimen/icon_small_size"
                        android:layout_marginRight="@dimen/extra_large_margin"
                        android:src="@drawable/ic_phone"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/contact_form_phone_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/medium_padding"
                        android:paddingBottom="@dimen/large_padding"
                        android:layout_marginRight="@dimen/small_margin">

                        <EditText
                            android:id="@+id/contact_form_phone_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone"
                            android:inputType="phone"/>

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/icon_small_size"
                        android:layout_height="@dimen/icon_small_size"
                        android:layout_marginRight="@dimen/extra_large_margin"
                        android:src="@drawable/ic_mail"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/contact_form_email_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/medium_padding"
                        android:paddingBottom="@dimen/large_padding"
                        android:layout_marginRight="@dimen/small_margin">

                        <EditText
                            android:id="@+id/contact_form_email_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"/>

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>