<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contact_detail_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.musasyihab.easycontact.contactdetail.ContactDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/contact_detail_loading"
            android:layout_width="@dimen/icon_small_size"
            android:layout_height="@dimen/icon_small_size"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/contact_detail_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/contact_detail_empty"
            android:layout_centerInParent="true"/>

        <ScrollView
            android:id="@+id/contact_detail_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/contact_detail_avatar_height"
                        android:background="@drawable/green_gradient">

                        <ImageView
                            android:id="@+id/contact_detail_avatar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            tools:src="@mipmap/ic_launcher"/>

                        <TextView
                            android:id="@+id/contact_detail_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/medium_padding"
                            android:paddingRight="@dimen/medium_padding"
                            android:paddingBottom="@dimen/small_padding"
                            android:paddingTop="@dimen/small_padding"
                            android:background="@drawable/transparent_black_gradient"
                            tools:text="Contact Name"
                            android:textSize="28sp"
                            android:textColor="@android:color/white"
                            android:layout_alignParentBottom="true"/>

                    </RelativeLayout>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/small_margin">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/medium_padding"
                            android:orientation="vertical">

                            <LinearLayout
                                android:id="@+id/contact_detail_phone_main_layout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="@dimen/large_padding"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="@dimen/icon_small_size"
                                    android:layout_height="@dimen/icon_small_size"
                                    android:layout_marginRight="@dimen/extra_large_margin"
                                    android:src="@drawable/ic_phone"/>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingRight="@dimen/medium_padding"
                                    android:paddingBottom="@dimen/large_padding"
                                    android:orientation="horizontal"
                                    android:background="@drawable/border_gray_bottom">

                                    <LinearLayout
                                        android:id="@+id/contact_detail_phone_layout"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:orientation="vertical">

                                        <TextView
                                            android:id="@+id/contact_detail_phone_text"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginBottom="@dimen/extra_small_margin"
                                            tools:text="+62 1234567890"
                                            android:textColor="@android:color/black"
                                            android:textSize="@dimen/text_small_size"/>

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:text="@string/phone"
                                            android:textSize="@dimen/text_extra_small_size"/>

                                    </LinearLayout>

                                    <ImageView
                                        android:id="@+id/contact_detail_phone_message"
                                        android:layout_width="@dimen/icon_small_size"
                                        android:layout_height="@dimen/icon_small_size"
                                        android:src="@drawable/ic_message"/>

                                </LinearLayout>

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/contact_detail_email_main_layout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="@dimen/large_padding"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="@dimen/icon_small_size"
                                    android:layout_height="@dimen/icon_small_size"
                                    android:layout_marginRight="@dimen/extra_large_margin"
                                    android:src="@drawable/ic_mail"/>

                                <LinearLayout
                                    android:id="@+id/contact_detail_email_layout"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingRight="@dimen/medium_padding"
                                    android:paddingBottom="@dimen/large_padding"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/contact_detail_email_text"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginBottom="@dimen/extra_small_margin"
                                        tools:text="email@address.com"
                                        android:textColor="@android:color/black"
                                        android:textSize="@dimen/text_small_size"/>

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/email"
                                        android:textSize="@dimen/text_extra_small_size"/>

                                </LinearLayout>

                            </LinearLayout>

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>